--- a/final.css
+++ b/final.css
@@ -316,6 +316,38 @@ div.side_banner{
     border-radius: 10px;
     
 }
+table{
+    width:100%;
+    table-layout: auto;
+  }
+.tbl-header{
+    background-color: rgba(255,255,255,0.3);
+   }
+th{
+    padding: 20px 15px;
+    text-align: left;
+    font-weight: 600;
+    font-size: 12px;
+    color: #000000;
+    text-transform: uppercase;
+  }
+
+
+  section{
+    margin: auto;
+  }
+
+
+::-webkit-scrollbar {
+    width: 6px;
+} 
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+} 
+::-webkit-scrollbar-thumb {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+}
+
 /**
 .content label {
 
